[gd_scene load_steps=6 format=3 uid="uid://qjfll57u5vsn"]

[ext_resource type="Script" path="res://src/mapa.gd" id="1_0si31"]
[ext_resource type="Texture2D" uid="uid://boik5cbbvsrtu" path="res://assets/ocean-backgouds/Ocean_1/3.png" id="1_kjxrm"]
[ext_resource type="Texture2D" uid="uid://bk25wxgtfig4u" path="res://assets/ocean-backgouds/Ocean_2/3.png" id="2_g7o2k"]
[ext_resource type="Texture2D" uid="uid://ctdbw5xuh6t4g" path="res://assets/ocean-backgouds/Ocean_3/3.png" id="3_2x2n3"]
[ext_resource type="Texture2D" uid="uid://cyfuyo6k8bmgc" path="res://assets/ocean-backgouds/Ocean_6/2.png" id="4_ka3st"]

[node name="Panel" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -342.0
offset_top = -218.0
offset_right = -302.0
offset_bottom = -178.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.0
script = ExtResource("1_0si31")

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = -5.2
offset_top = 3.0
offset_right = 645.8
offset_bottom = 335.0
scale = Vector2(0.1, 0.1)
text = "Ocean 1
"
icon = ExtResource("1_kjxrm")

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 81.8
offset_top = 2.99999
offset_right = 732.8
offset_bottom = 335.0
scale = Vector2(0.1, 0.1)
text = "Ocean 2
"
icon = ExtResource("2_g7o2k")

[node name="Button4" type="Button" parent="."]
layout_mode = 0
offset_left = -3.40002
offset_top = 51.4
offset_right = 647.6
offset_bottom = 383.4
scale = Vector2(0.1, 0.1)
text = "Ocean 3
"
icon = ExtResource("3_2x2n3")

[node name="Button5" type="Button" parent="."]
layout_mode = 0
offset_left = 83.2
offset_top = 50.6
offset_right = 734.2
offset_bottom = 382.6
scale = Vector2(0.1, 0.1)
text = "Ocean 4
"
icon = ExtResource("4_ka3st")

[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
